tests/NormalTests/paczka1/fuzzy1/57888132.err
Error in line 8: ZR1Pz S662 58,5
Error in line 5: ZR1Pez S824 87,2
Error in line 3: feKCewHI S662 91,5
Error in line 32: feKCewHI S662 50,1
Error in line 35: ZR1Pez S824 84,4
